Media object align issue fix

--- a/anbadoserver/static/basiccss.css
+++ b/anbadoserver/static/basiccss.css
@@ -44,7 +44,7 @@ body {
 
 #mytimeline {
     position: relative;
-    top: 0px;
+    top: 500px;
 
 }
 
